force-app/main/default/objects/Billing_Schedule_Map__mdt/Billing_Schedule_Map__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Mappings for Billing Schedules</description>
    <label>Billing Schedule Map</label>
    <pluralLabel>Billing Schedule Mappings</pluralLabel>
</CustomObject>