force-app/main/default/objects/Billing_Schedule_Map__mdt/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <label>Billing Frequency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>