force-app/main/default/objects/Billing_Schedule_Map__mdt/fields/Billing_Schedule_Result__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Result__c</fullName>
    <label>Billing Schedule Result</label>
    <length>100</length>
    <type>Text</type>
</CustomField>