force-app/main/default/objects/Billing_Schedule_Map__mdt/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>