force-app/main/default/objects/Billing_Schedule_Map__mdt/fields/Default_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Frequency__c</fullName>
    <description>Not RLM Related but Techvera Biz Structure.</description>
    <inlineHelpText>Not RLM Related but Techvera Biz Structure.</inlineHelpText>
    <label>Default Billing Frequency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>